--- a/SpaceEscape/SpaceEscape.csproj
+++ b/SpaceEscape/SpaceEscape.csproj
@@ -97,6 +97,7 @@
     <TypeScriptCompile Include="scripts\objects\asteroid.ts" />
     <TypeScriptCompile Include="scripts\objects\energy.ts" />
     <TypeScriptCompile Include="scripts\objects\plane.ts" />
+    <TypeScriptCompile Include="scripts\objects\space.ts" />
     <TypeScriptCompile Include="scripts\typings\createjs-lib\createjs-lib.d.ts" />
     <TypeScriptCompile Include="scripts\typings\easeljs\easeljs.d.ts" />
     <TypeScriptCompile Include="scripts\typings\preloadjs\preloadjs.d.ts" />
