--- a/SpaceEscape/SpaceEscape.csproj
+++ b/SpaceEscape/SpaceEscape.csproj
@@ -67,6 +67,8 @@
     <Content Include="assets\images\energy.png" />
     <Content Include="assets\images\blueButton.png" />
     <Content Include="assets\images\plane.png" />
+    <Content Include="assets\images\play.png" />
+    <Content Include="assets\images\playAgain.png" />
     <Content Include="assets\sounds\energySound.wav" />
     <Content Include="assets\sounds\explotion.wav" />
     <Content Include="packages.config" />
@@ -98,11 +100,14 @@
     <TypeScriptCompile Include="scripts\managers\assets.ts" />
     <TypeScriptCompile Include="scripts\managers\collision.ts" />
     <TypeScriptCompile Include="scripts\objects\asteroid.ts" />
+    <TypeScriptCompile Include="scripts\objects\button.ts" />
     <TypeScriptCompile Include="scripts\objects\energy.ts" />
     <TypeScriptCompile Include="scripts\objects\gameObject.ts" />
+    <TypeScriptCompile Include="scripts\objects\label.ts" />
     <TypeScriptCompile Include="scripts\objects\plane.ts" />
     <TypeScriptCompile Include="scripts\objects\scoreboard.ts" />
     <TypeScriptCompile Include="scripts\objects\space.ts" />
+    <TypeScriptCompile Include="scripts\states\over.ts" />
     <TypeScriptCompile Include="scripts\states\play.ts" />
     <TypeScriptCompile Include="scripts\typings\createjs-lib\createjs-lib.d.ts" />
     <TypeScriptCompile Include="scripts\typings\easeljs\easeljs.d.ts" />
