--- a/SpaceEscape/SpaceEscape.csproj
+++ b/SpaceEscape/SpaceEscape.csproj
@@ -71,6 +71,9 @@
     <Content Include="assets\images\playAgain.png" />
     <Content Include="assets\sounds\energySound.wav" />
     <Content Include="assets\sounds\explotion.wav" />
+    <Content Include="assets\sounds\gameOver.wav" />
+    <Content Include="assets\sounds\music.mp3" />
+    <Content Include="assets\sounds\plane.wav" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -107,6 +110,7 @@
     <TypeScriptCompile Include="scripts\objects\plane.ts" />
     <TypeScriptCompile Include="scripts\objects\scoreboard.ts" />
     <TypeScriptCompile Include="scripts\objects\space.ts" />
+    <TypeScriptCompile Include="scripts\states\intro.ts" />
     <TypeScriptCompile Include="scripts\states\over.ts" />
     <TypeScriptCompile Include="scripts\states\play.ts" />
     <TypeScriptCompile Include="scripts\typings\createjs-lib\createjs-lib.d.ts" />
